# TrussSlicer

./: .gitignore  LICENSE  README.md
printer_project/: .gitignore  pyproject.toml
printer_project/src/truss_slicer/: cli.py  layer_classifier.py  mesh_loader.py  preview.py  region_builder.py  slicer.py  snake_planner.py  truss_grid.py
printer_project/tests/fixtures/: make_cube.py
src/truss_slicer/: cli.py  geometry_utils.py  snake_planner.py  stubs_sorter.py
