[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "truss-slicer"
version = "0.1.0"
description = "桁架结构 3D 打印路径规划切片器"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "trimesh[easy]>=4.0",
    "scipy>=1.11",
    "networkx>=3.1",
    "shapely>=2.0",
    "plotly>=5.18",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
truss-slicer = "truss_slicer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
